--- a/course/安全攻防/基础部分.md
+++ b/course/安全攻防/基础部分.md
@@ -10,4 +10,5 @@
 
 ## 1.4 身份认证
 #### 对内认证（单点登录是一种集大成的及决方案）和对外认证（无认证和弱口令的安全隐患）
-#### CAS流程：JWT的好处在于不需要应用服务器维护cookie和session，缺点是无法进行注销；OAuth的主要特点是授权，基于开源认证中心复制一个应用登录自身账号。OPenID不提供授权，只需要手支付相关的信息即可、
+#### CAS流程：用户访问应用，应用将访问重定向至认证中心，用户进行认证，返回认证凭据，发送给应用，应用向认证中心验证，完成认证。
+#### CAS实现：JWT的好处在于不需要应用服务器维护cookie和session，缺点是无法自动进行注销；OAuth的主要特点是授权，基于开源认证中心复制一个应用登录自身账号。OPenID不提供授权，只需要手支付相关的信息即可、
