--- a/course/安全攻防/基础部分.md
+++ b/course/安全攻防/基础部分.md
@@ -1,14 +1,23 @@
 ## 1.1 安全CIA原则：
-#### 安全性（授权可访问，不可见）、完整性（权限完整性，不可改）、可用性（可用度高，性能好）
+#### 安全性（授权可访问, 不可见）、完整性（权限完整性, 不可改）、可用性（可用度高, 性能好）
 ## 1.2 安全是什么
 #### 黄金法则：认证、授权、审计（日志）
-#### 事前防御认证，事中防御授权，事后防御审计
+#### 事前防御认证, 事中防御授权, 事后防御审计
 ## 1.3 密码学
-#### 对称加密：加密解密的密钥都是一样，DES(过时，56位)、AES（128位）、IDEA（128位，无专利限制）
-#### 非对称加密：加密和解密使用不同的密钥，私钥加密，公钥解密， RSA、ECC
-#### 散列算法： 不需要解密，做唯一标识、计算负载均衡的算法，SHA-256加盐
+#### 对称加密：加密解密的密钥都是一样, DES(过时, 56位)、AES（128位）、IDEA（128位, 无专利限制）
+#### 非对称加密：加密和解密使用不同的密钥, 私钥加密, 公钥解密,  RSA、ECC
+#### 散列算法： 不需要解密, 做唯一标识、计算负载均衡的算法, SHA-256加盐
 
 ## 1.4 身份认证
 #### 对内认证（单点登录是一种集大成的及决方案）和对外认证（无认证和弱口令的安全隐患）
-#### CAS流程：用户访问应用，应用将访问重定向至认证中心，用户进行认证，返回认证凭据，发送给应用，应用向认证中心验证，完成认证。
-#### CAS实现：JWT的好处在于不需要应用服务器维护cookie和session，缺点是无法自动进行注销；OAuth的主要特点是授权，基于开源认证中心复制一个应用登录自身账号。OPenID不提供授权，只需要手支付相关的信息即可、
+#### CAS流程：用户访问应用, 应用将访问重定向至认证中心, 用户进行认证, 返回认证凭据, 发送给应用, 应用向认证中心验证, 完成认证。
+#### CAS实现：JWT的好处在于不需要应用服务器维护cookie和session, 缺点是无法自动进行注销；OAuth的主要特点是授权, 基于开源认证中心复制一个应用登录自身账号。OPenID不提供授权, 只需要手支付相关的信息即可、
+
+## 1.5 访问控制
+#### 本质：主体、客体、请求
+#### 四种常见的访问控制机制： DAC、role-BAC、rule-BAC、MAC
+#### DAC-自主访问控制, 让用户客体的所有者定义访问控制规则, 具备灵活性, 维护成本低
+#### role-BAC-基于角色的访问控制, 可以防止权限泛滥
+#### rule-BAC-基于规则的访问控制, 也就是针对请求本身定制的访问控制策略
+#### MAC是一种基于安全级别标签的访问控制策略, 可将主题和客体划分为秘密、四人、敏感、公开四个级别, 机密性不能低读高写, 完整性不能高读低写。
+#### 威胁评估的步骤：识别数据、识别攻击、识别漏洞。
