--- a/course/es实战/第一部分.md
+++ b/course/es实战/第一部分.md
@@ -16,7 +16,10 @@
 #### es搜索中主要包括精确值和全文本搜索, 精确值不需要分词, 全文本需要分词。支持uri search以及 request body两种方式。
 
 ## 6 分词
-#### es主要通过analyzer来分词, 有 char_filter/tokenizer/token filter,可以使用_analyzer API 来测试分词效果。
+#### es主要通过analyzer来分词, 有 char_filter/tokenizer/filter,可以使用_analyzer API 来测试分词效果。
+#### 关于如何理解它们, 可以顾名思义, char就是字符串, 也就是处理字符串, 比如去除html标签、正则替换、表情符号替换等；
+#### tokenizor也就是分词层面, 具体的内置分词有标准、keyword等
+#### filter也就是token filter, 基于词的过滤, 有首字符大小写转换、停用词等
 
 ## 7 聚合
 #### 提供了四种聚合方法, metric、bucket、pipeline、matrix。
@@ -29,6 +32,8 @@
 
 ## 10 index template 和 dynamic template
 #### 合理地使用template, 定义mapping和settings, dynamic template可以再特定的规则设定mapping。
+#### index模板可以用正则设定命中, order指的是优先级
+#### 借助dynamicTemplate可以实现一定格式的字段进行类型推断
 
 ## 习题一: es写入
 #### es使用post的方式写入一个文档,并生成一个新的文档id。put只能index和create。如果文档已存在则直接更新,版本号加一。
