--- a/algorithm/BFS_DFS/成语接龙1.md
+++ b/algorithm/BFS_DFS/成语接龙1.md
@@ -1,29 +1,39 @@
 ## BFS
 ```
-'''bfs'''
-def ladderLength(self, beginWord: str, endWord: str, wordList: List[str]) -> int:
-    from collections import deque
-    wordlist_seen = set(wordList)
-    zimu_list = set(chr(ord("a")+i) for i in range(26))
-    if endWord not in wordlist_seen:
+class Solution:
+    def ladderLength(self, beginWord: str, endWord: str, wordList: List[str]) -> int:
+        '''BFS'''
+        from collections import deque,defaultdict
+
+        wordList = set(wordList)
+        if endWord not in wordList:
+            return 0
+        #初始化编辑距离为1的搜索列表放入桶
+        buckets = defaultdict()
+        for word in wordList:
+            for i in range(len(word)):
+                matched = word[:i]+"*"+word[i+1:]
+                buckets.setdefault(matched,[]).append(word)
+
+        queue = deque([(beginWord,1)])
+        visited = set()
+        while len(queue)>0:
+            for _ in range(len(queue)):
+                curWord,ans = queue.pop()
+                if curWord == endWord:
+                    return ans 
+    
+                for i in range(len(curWord)):
+                    matched = curWord[:i]+"*"+curWord[i+1:]
+                    if matched not in buckets:
+                        continue
+                    for target in buckets[matched]:
+                        if target in visited:
+                            continue
+                        visited.add(target)
+                        queue.appendleft((target,ans+1))
+
         return 0
-
-    queue = deque([(beginWord,1)])
-    visited = set([beginWord])
-
-    while queue:
-        curword,res = queue.pop()
-        if curword == endWord:
-            return res
-        
-        for i,val in enumerate(curword):
-            for t in zimu_list-{val}:
-                target = curword[:i] + t + curword[i+1:]
-                if target not in visited and target in wordlist_seen:
-                    visited.add(target)
-                    queue.appendleft((target,res+1))
-
-    return 0
 
 ```
 
@@ -56,4 +66,44 @@ def dfs(cur,endWord,count):
 
 dfs(beginWord,endWord,1)
 return ans if ans <= len(wordlist_seen) else 0    
+```
+
+## 双向BFS
+```
+class Solution:
+    def ladderLength(self, beginWord: str, endWord: str, wordList: List[str]) -> int:
+        '''BFS'''
+        wordList = set(wordList)
+        if endWord not in wordList:
+            return 0
+        #初始化编辑距离为1的搜索列表放入桶
+        buckets = {}
+        for word in wordList:
+            for i in range(len(word)):
+                matched = word[:i]+"*"+word[i+1:]
+                buckets.setdefault(matched,[]).append(word)
+
+        front,back = [beginWord],[endWord]
+        visited = set()
+        count = 1
+        while front and back:
+            if len(front) > len(back):
+                front,back = back,front
+            next_queue = []
+            for curWord in front:
+                for i in range(len(curWord)):
+                    matched = curWord[:i]+"*"+curWord[i+1:]
+                    if matched not in buckets:
+                        continue
+                    for target in buckets[matched]:
+                        if target in set(back):
+                            return count +1
+                        if target not in visited:
+                            visited.add(target)
+                            next_queue.append(target)
+            front = next_queue
+            count += 1
+        return 0
+
+
 ```
