--- a/algorithm/BFS_DFS/模板.md
+++ b/algorithm/BFS_DFS/模板.md
@@ -2,3 +2,7 @@
 #### 进先出 先处理父节点，在处理儿子节点们
 ## DFS 栈  
 #### 递归和栈实现，先处理左儿子 在处理父节点  典型的中序遍历
+## 双向BFS
+## 从两边队列最少的set开始找, 终止条件是 找的值在尾set中存在, 表示已终止, 例子参考成语接龙。
+## A* search, 启发式搜索, 用优先级队列实现
+
