--- a/algorithm/array/滑动窗口最大值.md
+++ b/algorithm/array/滑动窗口最大值.md
@@ -12,8 +12,10 @@ class Solution:
         deque = collections.deque()
         ans = []
         for i,num in enumerate(nums):
+            # outdate indices
             if len(deque) > 0 and deq[0] <= i-k:
                 deq.popleft()
+            # 局部最大值
             while len(deque) > 0 and num > nums[deq[-1]]:
                 deq.pop()    
             deq.append(i)
