--- a/algorithm/BFS_DFS/最小基因变化.md
+++ b/algorithm/BFS_DFS/最小基因变化.md
@@ -1,35 +1,37 @@
 ## BFS 
 #### 细节在于每次找编辑距离为1的图
 ```
-def minMutation(self, start: str, end: str, bank: List[str]) -> int:
-    '''
-    bfs
-    '''
-    from collections import deque
-    bank_seen = set(bank)
-    if end not in bank_seen:
+class Solution:
+    def minMutation(self, start: str, end: str, bank: List[str]) -> int:
+        bank_seen = set(bank)
+        if end not in bank_seen:
+            return -1
+
+        from collections import deque
+
+        buckets = {}
+        for genric in bank_seen:
+            for i in range(len(genric)):
+                matched = genric[:i] + "*" + genric[i+1:]
+                buckets.setdefault(matched,[]).append(genric)
+
+        queue = deque([(start,0)])
+        visited = set()
+
+        while queue:
+            for _ in range(len(queue)):
+                cur,ans = queue.pop()
+                if cur == end:
+                    return ans
+                for i in range(len(cur)):
+                    matched = cur[:i] + "*" + cur[i+1:]
+                    if matched not in buckets:
+                        continue
+                    for t in buckets[matched]:
+                        if t not in visited:
+                            visited.add(t)
+                            queue.appendleft((t,ans+1))
         return -1
-    cases = {"A","C","G","T"}
-
-    def genernate(cur):
-        for i,val in enumerate(cur):
-            for t in cases-{val}:
-                target = cur[:i] + t + cur[i+1:]
-                if target in bank_seen:
-                    yield target
-
-    queue = deque([(start,0)])
-    visited = set([start])
-    while queue:
-        node,ans = queue.pop()
-        if node == end:
-            return ans
-        for b in genernate(node):
-            if b not in visited:
-                visited.add(b)
-                queue.appendleft((b,ans+1))
-    
-    return -1
 ```
 
 ## DFS
@@ -66,4 +68,45 @@ def minMutation(self, start: str, end: str, bank: List[str]) -> int:
     ans = len(bank) + 1
     dfs(start,end,0)
     return ans if ans  <= len(bank) else -1
+```
+
+## 双向BFS
+```
+class Solution:
+    def minMutation(self, start: str, end: str, bank: List[str]) -> int:
+        bank_seen = set(bank)
+        if end not in bank_seen:
+            return -1
+
+        buckets = {}
+        for genric in bank_seen:
+            for i in range(len(genric)):
+                matched = genric[:i] + "*" + genric[i+1:]
+                buckets.setdefault(matched,[]).append(genric)
+
+        front,back = [start],[end]
+        visited = set()
+        count = 0
+
+        while front and back:
+            if len(front) > len(back):
+                back,front = front,back
+            
+            next_queue = []
+            for _ in range(len(front)):
+                cur = front.pop()
+                for i in range(len(cur)):
+                    matched = cur[:i] + "*" + cur[i+1:]
+                    if matched not in buckets:
+                        continue
+                    for t in buckets[matched]:
+                        # 在这里判断可以减少最后一层的其他节点的遍历
+                        if t in set(back):
+                            return count +1
+                        if t not in visited:
+                            visited.add(t)
+                            next_queue.append(t)
+            front = next_queue
+            count += 1
+        return -1
 ```
