--- a/algorithm/array/接雨水.md
+++ b/algorithm/array/接雨水.md
@@ -42,10 +42,10 @@ def trap(self, height: List[int]) -> int:
     ans = 0
     for i in range(len(height)):
         while stack and height[i] > height[stack[-1]]:
-            data  =stack.pop()
+            curIndex  =stack.pop()
             if len(stack) == 0:
                 break
-            curheight = min(height[i],height[stack[-1]])-height[data]
+            curheight = min(height[i],height[stack[-1]])-height[curIndex]
             curwidth = i-stack[-1]-1
             ans += curheight *curwidth
         stack.append(i)
