--- a/algorithm/binary/进制转换.md
+++ b/algorithm/binary/进制转换.md
@@ -17,16 +17,8 @@
 #### 将x的最高位至第n位清零: x&((1<<n)-1)
 #### 将第n位值至第0位清零: x&(~((1<<(n+1)-1)))    
 
-## 判断奇偶性:取最低位
-#### (x&1) == 1
-
-## 二分法取一半
-#### mid=(left+right)>>1
-
-## 清零最低位的1
-#### x&(x-1)
-
-## x&-x
-#### 得到最低位的1
-
-## x&(~x) = 0
+#### 判断奇偶性:取最低位 x&1 == 1
+#### 二分法取一半 mid=(left+right)>>1
+#### 清零最低位的1 x&(x-1)
+#### 得到最低位的1 x&1
+#### x&(~x) = 0
