--- a/algorithm/tree/前序遍历.md
+++ b/algorithm/tree/前序遍历.md
@@ -46,3 +46,38 @@ def inorderTraversal(self, root: TreeNode) -> List[int]:
             ans.append(node.val)
     return ans
 ```
+
+## DFS
+```
+def inorderTraversal(self, root: TreeNode) -> List[int]:
+    def dfs(root):
+        # 终止条件
+        if root is None:
+            return
+        # 处理当前层
+        ans.append(root.val)
+        # 递归
+        dfs(root.left)
+        dfs(root.right)
+
+    ans = []
+    inorder(root)
+    return ans
+```
+
+## BFS
+```
+def inorderTraversal(self, root: TreeNode) -> List[int]:=
+    queue = [root]
+    ans = []
+    while queue:
+        #按照水波纹，一层层处理
+        for _ in range(len(queue)):
+            node = queue.pop()
+            if node is None:
+                continue
+            ans.append(node.val)
+            queue.append(node.right)
+            queue.append(node.left)
+    return ans
+```
