--- a/course/nginx/基础.md
+++ b/course/nginx/基础.md
@@ -63,3 +63,93 @@
 3. server 域名
 4. location router正则表达
 
+#### nginx cmds
+
+1. 使用-c指定的配置文件
+2. 使用-g指定配置指令
+3. 使用-p指定运行的目录
+4. 使用-s发送信号
+    - stop 立刻停止服务
+    - quit 优雅地停止服务
+    - reload重载配置文件
+    - reopen重新开始记录日志文件
+    - 重载 nginx -s reload
+
+热部署 
+
+- 备份二进制文件
+- 更换正在使用的nginx进程文件
+- kill -USR2 13195  发送USR2信号
+- kill  -WINCH 13195 发送WINCH信号，老的nginx上的work进程断开
+
+日志切割：
+
+1. LOGS_PATH=/usr/local/history
+2. CUR_LOGS_PATH=/usr/local/cur
+3. YESTERDAY=$(date - d "yesterday"+%Y-%m-%d)
+4. mv ${CUR_LOGS_PATH}/access.log ${LOGS_PATH}/${YESTERDAY}_access.log
+5. mv ${CUR_LOGS_PATH}/error.log ${LOGS_PATH}/${YESTERDAY}_error.log
+6. kill - USR1 $(cat /usr/local/nginx/logs/nginx.pid)
+
+#### 配置静态资源web服务
+
+- alias（避免使用root，以免带入不必要路径）
+  - 映射本地路径到url router中
+- gzip on
+  - gzip_min_length 压缩最少长度
+  - gzip_comp_level 压缩级别
+  - gzip_types 压缩类型
+
+-  autoindex
+  - 共享静态资源，让用户访问文件夹一样访问资源
+- set $limit_rate 1kb
+  - 限制访问速度
+- log_format 
+  - 查看nginx.org/docs/看内置变量
+- access_log
+  - access_log所在的位置决定了日志会记录那些url
+  - access_log  log_path  main;
+
+#### 配置具备缓存功能的nginx 代理转发服务
+
+- listen
+  - 默认是0.0.0.0，改成127.0.0.1本机可访问
+- upstream 
+  - upstream中设置需要被代理的server以及用什么算法
+  - server中server_name表示访问的域名
+  - location中添加proxy_pass http://server_name
+  - location中的其他变量
+    - proxy_set_header Host $host;
+    - proxy_set_header X-Real-IP $remote_addr;
+    - proxy_set_header X-Forwarded-for $proxy_add_xforwarded_for;
+    - proxy_cache my_cache;#(需要在http模块中设置proxy_cahe_path)
+    - proxy_cache_key $host$uri$is_args$args;
+    - proxy_cache_valid 200 304 302 1d;
+
+#### GoAccess可视化access.log
+
+- goaccess access.log -o ../html/report.html
+- apt-get install 或者yum install 
+
+#### TLS/SSL协议
+
+ISO模型中的表示层无感知安全加密
+
+- 密钥交换
+- 身份验证RSA
+- 对称加密算法AES、强度、分组
+- 摘要算法SHA256生成签名
+
+#### 对称加密、非对称加密
+
+对称加密
+
+- 性能好
+- 遍历一次
+- 异或位运算
+
+非对称加密
+
+- 公钥发给别人用来解密
+- 私钥自己留着用来加密
+- 身份认证
