--- a/algorithm/BFS_DFS/最小基因变化.md
+++ b/algorithm/BFS_DFS/最小基因变化.md
@@ -1,5 +1,5 @@
 ## BFS 
-#### 细节在于每次找编辑距离为1的图
+-  细节在于每次找编辑距离为1的图
 ```
 class Solution:
     def minMutation(self, start: str, end: str, bank: List[str]) -> int:
