--- a/algorithm/Binary_search/寻找旋转排序数组中的最小值.md
+++ b/algorithm/Binary_search/寻找旋转排序数组中的最小值.md
@@ -12,8 +12,8 @@ class Solution:
 
 ```
 
-#### 1234567 最小值在左边 mid < right  mid > left
-#### 6712345 最小值在左边 mid < right  mid < left
-#### 4567123 最小值最右边 mid > right  mid > left
-#### 7654321 最小值在右边 mid > right  mid < left
-#### 5671234 最小值在中间 mid < right  mid < left
+-  1234567 最小值在左边 mid < right  mid > left
+-  6712345 最小值在左边 mid < right  mid < left
+-  4567123 最小值最右边 mid > right  mid > left
+-  7654321 最小值在右边 mid > right  mid < left
+-  5671234 最小值在中间 mid < right  mid < left
