--- a/algorithm/Binary_search/搜索旋转排序数组.md
+++ b/algorithm/Binary_search/搜索旋转排序数组.md
@@ -43,5 +43,5 @@ class Solution:
 ```
 
 
-#### 6712345 => -inf -inf 12 3 4 5
-#### 4567123 => 4567 inf inf inf
+-  6712345 => -inf -inf 12 3 4 5
+-  4567123 => 4567 inf inf inf
