--- a/algorithm/array/圆柱图中的最大矩阵.md
+++ b/algorithm/array/圆柱图中的最大矩阵.md
@@ -1,4 +1,4 @@
-#### 暴力& 暴力优化 (j-i+1) *min(height[i:j+1]) o(n**3) --> o(n**2) 
+-  暴力& 暴力优化 (j-i+1) *min(height[i:j+1]) o(n**3) --> o(n**2) 
 ```
 ans = 0
 for i in range(len(heights)):
@@ -9,7 +9,7 @@ for i in range(len(heights)):
 return ans
 ```
 
-#### 单调栈
+-  单调栈
 ```
 '''
 单调栈  
