--- a/algorithm/binary/进制转换.md
+++ b/algorithm/binary/进制转换.md
@@ -8,17 +8,17 @@
 ## 按位异或 ^ 
 
 ## 异或高级操作 x^0 = x; x^1s = ~x; x^(~x) = 1s; x^x =0;交换律、结合律
-#### 1<<n == 00001000(将第n位置为1)
-#### 将x的最右边的n位清零: x&(~0<<n)
-#### 获取x的第n位值(0或者1): (x>>n)&1 (右移n位,将值移到低位)
-#### 获取x的第n位的幂值:x&(1<<(n-1)) 不就是 2**n？
-#### 仅将第n位置为1: x|(1<<n)
-#### 仅将第n位置为0: x&(~(1<<n))
-#### 将x的最高位至第n位清零: x&((1<<n)-1)
-#### 将第n位值至第0位清零: x&(~((1<<(n+1)-1)))    
+-  1<<n == 00001000(将第n位置为1)
+-  将x的最右边的n位清零: x&(~0<<n)
+-  获取x的第n位值(0或者1): (x>>n)&1 (右移n位,将值移到低位)
+-  获取x的第n位的幂值:x&(1<<(n-1)) 不就是 2**n？
+-  仅将第n位置为1: x|(1<<n)
+-  仅将第n位置为0: x&(~(1<<n))
+-  将x的最高位至第n位清零: x&((1<<n)-1)
+-  将第n位值至第0位清零: x&(~((1<<(n+1)-1)))    
 
-#### 判断奇偶性:取最低位 x&1 == 1
-#### 二分法取一半 mid=(left+right)>>1
-#### 清零最低位的1 x&(x-1)
-#### 得到最低位的1 x&1
-#### x&(~x) = 0
+-  判断奇偶性:取最低位 x&1 == 1
+-  二分法取一半 mid=(left+right)>>1
+-  清零最低位的1 x&(x-1)
+-  得到最低位的1 x&1
+-  x&(~x) = 0
