--- a/course/http协议/基础篇.md
+++ b/course/http协议/基础篇.md
@@ -1,15 +1,15 @@
 ## 什么是http？
-#### 是一种用在计算机世界的协议, 确立了计算机之间交流通信的规范, 以及相关的控制和错误处理方式；
-#### http传输的是两点之间的数据, 不能用于广播、寻址或者路由；
-#### http传输的是超文本数据；
-#### http是构建互联网的基础技术, 没有实体, 依赖许多其他的技术实现。
+-  是一种用在计算机世界的协议, 确立了计算机之间交流通信的规范, 以及相关的控制和错误处理方式；
+-  http传输的是两点之间的数据, 不能用于广播、寻址或者路由；
+-  http传输的是超文本数据；
+-  http是构建互联网的基础技术, 没有实体, 依赖许多其他的技术实现。
 
 ## http的各种概念
-#### 浏览器 请求的主体 User Agent
-#### WebServer 响应的主体（实体） Apache和nginx
-#### CDN 内容分发网络, 就近节点, 利用了缓存系统。
-#### 爬虫 另一种user agent
-#### HTML WAF（网页应用防火墙） WebService（一种基于web的服务架构技术）
-#### rpc  网络通信封装成函数调用的形式
-#### soap 是web service的消息格式
-#### restful 是一种接口设计理念
+-  浏览器 请求的主体 User Agent
+-  WebServer 响应的主体（实体） Apache和nginx
+-  CDN 内容分发网络, 就近节点, 利用了缓存系统。
+-  爬虫 另一种user agent
+-  HTML WAF（网页应用防火墙） WebService（一种基于web的服务架构技术）
+-  rpc  网络通信封装成函数调用的形式
+-  soap 是web service的消息格式
+-  restful 是一种接口设计理念
