--- a/course/nginx/基础.md
+++ b/course/nginx/基础.md
@@ -1,10 +1,10 @@
-#### Nginx适用场景
+####  Nginx适用场景
 
 - 静态资源缓存
 - api服务
 - 代理转发
 
-#### nginx出现的历史背景
+####  nginx出现的历史背景
 
 - 日益增长的网络需求
 - 摩尔定律
@@ -28,7 +28,6 @@
 #### nginx的发布版本
 
 - nginx && 商业版
-
 - OpenResty  && 商业版（api服务、网络防火墙）
 - Tengine
 
@@ -44,7 +43,7 @@
 - 处理报错： the HTTP gzip module requires the zlib library.
   - apt install zlib1g-dev
 
-#### nginx的配置语法和模块
+####  nginx的配置语法和模块
 
 语法：
 
@@ -63,7 +62,7 @@
 3. server 域名
 4. location router正则表达
 
-#### nginx cmds
+####  nginx cmds
 
 1. 使用-c指定的配置文件
 2. 使用-g指定配置指令
@@ -99,7 +98,6 @@
   - gzip_min_length 压缩最少长度
   - gzip_comp_level 压缩级别
   - gzip_types 压缩类型
-
 -  autoindex
   - 共享静态资源，让用户访问文件夹一样访问资源
 - set $limit_rate 1kb
@@ -109,9 +107,7 @@
 - access_log
   - access_log所在的位置决定了日志会记录那些url
   - access_log  log_path  main;
-
-#### 配置具备缓存功能的nginx 代理转发服务
-
+-  配置具备缓存功能的nginx 代理转发服务
 - listen
   - 默认是0.0.0.0，改成127.0.0.1本机可访问
 - upstream 
@@ -126,7 +122,7 @@
     - proxy_cache_key $host$uri$is_args$args;
     - proxy_cache_valid 200 304 302 1d;
 
-#### GoAccess可视化access.log
+####  GoAccess可视化access.log
 
 - goaccess access.log -o ../html/report.html
 - apt-get install 或者yum install 
@@ -151,5 +147,18 @@ ISO模型中的表示层无感知安全加密
 非对称加密
 
 - 公钥发给别人用来解密
-- 私钥自己留着用来加密
+- 私钥自己留着用来加密 
 - 身份认证
+
+####  TLS通讯过程
+
+- 验证身份
+- 达成安全套件共识
+- 传递秘钥
+- 加密通讯
+
+#### 搭建HTTPS网站
+
+- yum install python2-certbot-nginx
+- cerbot --nginx-server-root=/usr/local/bin/nginx/conf -d  your-host 
+
