--- a/course/检索技术/基础篇.md
+++ b/course/检索技术/基础篇.md
@@ -1,8 +1,8 @@
-#### 倒排索引
+-  倒排索引
 - 底层实现是hash表, 将内容或者属性作为key来存储对应的文档列表, 使得我们在O(1)的时间复杂度完成查询。
 - 通过分词技术切割词语, 拿到各自的posting list, 继而通过链表归并的过程完成多个key的联合查询。 
 
-#### 测试
+-  测试
 假设有个员工管理系统有ID、姓名、所属部门信息, 需要查询根据ID范围查询员工信息, 根据姓名查询员工信息, 根据部门查询部门里有哪些员工？
 
 - 根据有序数组读取就行, 有序数组 
@@ -13,19 +13,19 @@
 
 四个文件: 用户信息文件, 用户索引文件, 姓名倒排索引, 部门倒排索引
 
-#### 联合查询优化
+-  联合查询优化
 - 调整次序法、通过从小到大求交集
 - 快速多路归并法 利用跳表快速跳过多个元素的能力结合优化多路归并方案, 提升posting list 归并性能。
 - 预先组合法 将热门的key查询组合提前处理好, 作为单独可以保持好posting list
 - 缓存法, 将临时的热点查询组合结果进行缓存, 避免重复查询每次都重复计算
 
-#### 倒排索引加速
+-  倒排索引加速
 - 跳表来实现posting list。
 - 哈希表加速倒排索引, 大表建立hash, 查询小表, 将经常使用的key的posting list存入哈希表。
 - 位图法: hash之后存在位图中, 利用了其快速求交集的原理可以准备找到posting list
 - roaring bitmap 则是由一个高16位的有序数组存数字（key）, 低16位作为下标, 存入bitmap（posting list）
 
-#### B+树索引的快速索引
+-  B+树索引的快速索引
 
 内存读写比磁盘快
 
@@ -69,7 +69,7 @@ B+树如何动态调整自己
 
 - 索引与数据分离，实现快速检索
 
-#### Nosql检索：LSM树（Log Structured Merge Trees）
+-  Nosql检索：LSM树（Log Structured Merge Trees）
 
 B+树为何不适合大数据写入场景
 
