--- a/course/es实战/第一部分.md
+++ b/course/es实战/第一部分.md
@@ -1,66 +1,66 @@
 # 第一部分
 ## 1 es与关系型数据库比较
-#### 相比于关系型数据库,es提供了模糊搜索,搜索条件的算法等关系型数据库所不擅长的功能,在事务性等方面却不如关系型数据库
+-  相比于关系型数据库,es提供了模糊搜索,搜索条件的算法等关系型数据库所不擅长的功能,在事务性等方面却不如关系型数据库
 
 ## 2 索引与分片
-#### 从物理的角度来看, 索引就是具有相似文档的集合,
-#### 从逻辑的角度看, 分片就是一个Lucene实例, 存储了索引的所有数据。分片副本可以分布式扩展, 保障数据可用性、以及一定程度提高性能。
+-  从物理的角度来看, 索引就是具有相似文档的集合,
+-  从逻辑的角度看, 分片就是一个Lucene实例, 存储了索引的所有数据。分片副本可以分布式扩展, 保障数据可用性、以及一定程度提高性能。
 
 ## 3 es的文档类型
-#### 任意形式的json数据。
+-  任意形式的json数据。
 
 ## 4 es两大功能
-#### 搜索和聚合。
+-  搜索和聚合。
 
 ## 5 搜索
-#### es搜索中主要包括精确值和全文本搜索, 精确值不需要分词, 全文本需要分词。支持uri search以及 request body两种方式。
+-  es搜索中主要包括精确值和全文本搜索, 精确值不需要分词, 全文本需要分词。支持uri search以及 request body两种方式。
 
 ## 6 分词
-#### es主要通过analyzer来分词, 有 char_filter/tokenizer/filter,可以使用_analyzer API 来测试分词效果。
-#### 关于如何理解它们, 可以顾名思义, char就是字符串, 也就是处理字符串, 比如去除html标签、正则替换、表情符号替换等；
-#### tokenizor也就是分词层面, 具体的内置分词有标准、keyword等
-#### filter也就是token filter, 基于词的过滤, 有首字符大小写转换、停用词等
+-  es主要通过analyzer来分词, 有 char_filter/tokenizer/filter,可以使用_analyzer API 来测试分词效果。
+-  关于如何理解它们, 可以顾名思义, char就是字符串, 也就是处理字符串, 比如去除html标签、正则替换、表情符号替换等；
+-  tokenizor也就是分词层面, 具体的内置分词有标准、keyword等
+-  filter也就是token filter, 基于词的过滤, 有首字符大小写转换、停用词等
 
 ## 7 聚合
-#### 提供了四种聚合方法, metric、bucket、pipeline、matrix。
+-  提供了四种聚合方法, metric、bucket、pipeline、matrix。
 
 ## 8 批量操作API
-#### 包括bulk、mget、msearch等api。批量操作的数据不宜过大,以免降低性能。
+-  包括bulk、mget、msearch等api。批量操作的数据不宜过大,以免降低性能。
 
 ## 9 索引的mapping
-#### 类似于mysql中的表结构定义schema, 包含了字段的类型。 可以显式地定义mapping文件, 可以在mapping中定义analyzer。
+-  类似于mysql中的表结构定义schema, 包含了字段的类型。 可以显式地定义mapping文件, 可以在mapping中定义analyzer。
 
 ## 10 index template 和 dynamic template
-#### 合理地使用template, 定义mapping和settings, dynamic template可以再特定的规则设定mapping。
-#### index模板也就是默认模板, 主要包括setting和mapping, 当索引创建的时候, 可以用正则设定命中, order指的是优先级
-#### 借助dynamicTemplate可以实现一定格式的字段进行类型推断
+-  合理地使用template, 定义mapping和settings, dynamic template可以再特定的规则设定mapping。
+-  index模板也就是默认模板, 主要包括setting和mapping, 当索引创建的时候, 可以用正则设定命中, order指的是优先级
+-  借助dynamicTemplate可以实现一定格式的字段进行类型推断
 
 ## 习题一: es写入
-#### es使用post的方式写入一个文档,并生成一个新的文档id。put只能index和create。如果文档已存在则直接更新,版本号加一。
+-  es使用post的方式写入一个文档,并生成一个新的文档id。put只能index和create。如果文档已存在则直接更新,版本号加一。
 
 ## 习题二: 索引一个新的文档, 背后会发生什么?
-#### 默认情况下回创建相应的索引, 并且自己设置mapping, 当然, 实际情况还要看是否有合适的index template。 
+-  默认情况下回创建相应的索引, 并且自己设置mapping, 当然, 实际情况还要看是否有合适的index template。 
 
 ## 习题三: 在es7中合法的索引类型是？
-#### _doc
+-  _doc
 
 ## 习题四 :精确值和全文的本质是？
-#### 前者不会被分词,后者会
+-  前者不会被分词,后者会
 
 ## 习题五: analyzer 的组成？
-#### char_filter/tokenizer/token filter
+-  char_filter/tokenizer/token filter
 
 ## 习题六: match/match_phrase?
-#### match中的词是or的关系, match_phrase是and的关系,并且term之间的位置关系也会影响搜索的结果。
+-  match中的词是or的关系, match_phrase是and的关系,并且term之间的位置关系也会影响搜索的结果。
 
 ## 习题七: 如果希望match_phrase匹配到更多的结果, 你应该配置查询中的什么参数？
-#### slop
+-  slop
 
 ## 习题八: dynamic 的模式
-#### strict报错, false可以被索引,新的字段在source中可见,不可被搜索,
+-  strict报错, false可以被索引,新的字段在source中可见,不可被搜索,
 
 ## 习题九:字段类型修改,需要reindex吗？
-#### 需要
+-  需要
 
 ## 习题十:字段类型是text的,一定可以被全文搜索？
-#### 正确
+-  正确
