--- a/course/检索技术/基础篇.md
+++ b/course/检索技术/基础篇.md
@@ -1,17 +1,17 @@
 -  倒排索引
-- 底层实现是hash表, 将内容或者属性作为key来存储对应的文档列表, 使得我们在O(1)的时间复杂度完成查询。
-- 通过分词技术切割词语, 拿到各自的posting list, 继而通过链表归并的过程完成多个key的联合查询。 
+  - 底层实现是hash表, 将内容或者属性作为key来存储对应的文档列表, 使得我们在O(1)的时间复杂度完成查询。
+  - 通过分词技术切割词语, 拿到各自的posting list, 继而通过链表归并的过程完成多个key的联合查询。 
 
 -  测试
-假设有个员工管理系统有ID、姓名、所属部门信息, 需要查询根据ID范围查询员工信息, 根据姓名查询员工信息, 根据部门查询部门里有哪些员工？
+  -  假设有个员工管理系统有ID、姓名、所属部门信息, 需要查询根据ID范围查询员工信息, 根据姓名查询员工信息, 根据部门查询部门里有哪些员工？
 
-- 根据有序数组读取就行, 有序数组 
+    - 根据有序数组读取就行, 有序数组 
 
-- 根据倒排索引, 姓名为key, 员工ID为posting list；
+    - 根据倒排索引, 姓名为key, 员工ID为posting list；
 
-- 倒排索引:部门id为可以, 员工ID为posting list 
+    - 倒排索引:部门id为可以, 员工ID为posting list 
 
-四个文件: 用户信息文件, 用户索引文件, 姓名倒排索引, 部门倒排索引
+## 四个文件: 用户信息文件, 用户索引文件, 姓名倒排索引, 部门倒排索引
 
 -  联合查询优化
 - 调整次序法、通过从小到大求交集
