--- a/course/nginx/基础.md
+++ b/course/nginx/基础.md
@@ -1,140 +1,140 @@
-####  Nginx适用场景
+#### Nginx 适用场景
 
 - 静态资源缓存
-- api服务
+- api 服务
 - 代理转发
 
-####  nginx出现的历史背景
+#### nginx 出现的历史背景
 
 - 日益增长的网络需求
 - 摩尔定律
-- Apache的低效缓慢
+- Apache 的低效缓慢
 
-#### nginx的五个主要优点
+#### nginx 的五个主要优点
 
 - 高并发、高性能
 - 可扩展
 - 热部署
 - 高可靠性
-- BSD许可证
+- BSD 许可证
 
-#### nginx的组成
+#### nginx 的组成
 
-- nginx的二进制可执行文件
+- nginx 的二进制可执行文件
 - nginx.conf
 - access.log
 - error.log
 
-#### nginx的发布版本
+#### nginx 的发布版本
 
 - nginx && 商业版
-- OpenResty  && 商业版（api服务、网络防火墙）
+- OpenResty && 商业版（api 服务、网络防火墙）
 - Tengine
 
-#### nginx的编译
+#### nginx 的编译
 
-- wget http://nginx.org/download/nginx-1.18.0.tar.gz && tar -zxf  nginx-1.18.0.tar.gz && cd nginx-1.18.0
-- 关键词换皮肤cp -r contrib/vim/*  ~/.vim
+- wget http://nginx.org/download/nginx-1.18.0.tar.gz && tar -zxf nginx-1.18.0.tar.gz && cd nginx-1.18.0
+- 关键词换皮肤 cp -r contrib/vim/\* ~/.vim
 - ./configure --prefix=/home/test
-- 处理报错： ./configure: error: C compiler cc is not found 
+- 处理报错： ./configure: error: C compiler cc is not found
   - apt install gcc
-- 处理报错： the HTTP rewrite module requires the PCRE library   
+- 处理报错： the HTTP rewrite module requires the PCRE library
   - apt install libpcre3 libpcre3-dev
 - 处理报错： the HTTP gzip module requires the zlib library.
   - apt install zlib1g-dev
 
-####  nginx的配置语法和模块
+#### nginx 的配置语法和模块
 
 语法：
 
 - 配置文件由指令和指令块构成
 - 每条指令以；分号收尾，指令与参数间可以用多个空格符号分割；
 - 指令块以{}将多个指令组织在一起；
-- include语句允许组合多个配置文件
+- include 语句允许组合多个配置文件
 - 使用#添加注释
-- 使用$使用变量
+- 使用\$使用变量
 - 部分指令支持正则表达式
 
 模块：
 
-1. http模块
-2. upstream模块
+1. http 模块
+2. upstream 模块
 3. server 域名
-4. location router正则表达
+4. location router 正则表达
 
-####  nginx cmds
+#### nginx cmds
 
-1. 使用-c指定的配置文件
-2. 使用-g指定配置指令
-3. 使用-p指定运行的目录
-4. 使用-s发送信号
-    - stop 立刻停止服务
-    - quit 优雅地停止服务
-    - reload重载配置文件
-    - reopen重新开始记录日志文件
-    - 重载 nginx -s reload
+1. 使用-c 指定的配置文件
+2. 使用-g 指定配置指令
+3. 使用-p 指定运行的目录
+4. 使用-s 发送信号
+   - stop 立刻停止服务
+   - quit 优雅地停止服务
+   - reload 重载配置文件
+   - reopen 重新开始记录日志文件
+   - 重载 nginx -s reload
 
-热部署 
+热部署
 
 - 备份二进制文件
-- 更换正在使用的nginx进程文件
-- kill -USR2 13195  发送USR2信号
-- kill  -WINCH 13195 发送WINCH信号，老的nginx上的work进程断开
+- 更换正在使用的 nginx 进程文件
+- kill -USR2 13195 发送 USR2 信号
+- kill -WINCH 13195 发送 WINCH 信号，老的 nginx 上的 work 进程断开
 
 日志切割：
 
 1. LOGS_PATH=/usr/local/history
 2. CUR_LOGS_PATH=/usr/local/cur
-3. YESTERDAY=$(date - d "yesterday"+%Y-%m-%d)
-4. mv ${CUR_LOGS_PATH}/access.log ${LOGS_PATH}/${YESTERDAY}_access.log
-5. mv ${CUR_LOGS_PATH}/error.log ${LOGS_PATH}/${YESTERDAY}_error.log
-6. kill - USR1 $(cat /usr/local/nginx/logs/nginx.pid)
+3. YESTERDAY=\$(date - d "yesterday"+%Y-%m-%d)
+4. mv ${CUR_LOGS_PATH}/access.log ${LOGS_PATH}/\${YESTERDAY}\_access.log
+5. mv ${CUR_LOGS_PATH}/error.log ${LOGS_PATH}/\${YESTERDAY}\_error.log
+6. kill - USR1 \$(cat /usr/local/nginx/logs/nginx.pid)
 
-#### 配置静态资源web服务
+#### 配置静态资源 web 服务
 
-- alias（避免使用root，以免带入不必要路径）
-  - 映射本地路径到url router中
+- alias（避免使用 root，以免带入不必要路径）
+  - 映射本地路径到 url router 中
 - gzip on
   - gzip_min_length 压缩最少长度
   - gzip_comp_level 压缩级别
   - gzip_types 压缩类型
--  autoindex
-  - 共享静态资源，让用户访问文件夹一样访问资源
-- set $limit_rate 1kb
+- autoindex
+- 共享静态资源，让用户访问文件夹一样访问资源
+- set \$limit_rate 1kb
   - 限制访问速度
-- log_format 
-  - 查看nginx.org/docs/看内置变量
+- log_format
+  - 查看 nginx.org/docs/看内置变量
 - access_log
-  - access_log所在的位置决定了日志会记录那些url
-  - access_log  log_path  main;
--  配置具备缓存功能的nginx 代理转发服务
+  - access_log 所在的位置决定了日志会记录那些 url
+  - access_log log_path main;
+- 配置具备缓存功能的 nginx 代理转发服务
 - listen
-  - 默认是0.0.0.0，改成127.0.0.1本机可访问
-- upstream 
-  - upstream中设置需要被代理的server以及用什么算法
-  - server中server_name表示访问的域名
-  - location中添加proxy_pass http://server_name
-  - location中的其他变量
-    - proxy_set_header Host $host;
-    - proxy_set_header X-Real-IP $remote_addr;
-    - proxy_set_header X-Forwarded-for $proxy_add_xforwarded_for;
-    - proxy_cache my_cache;#(需要在http模块中设置proxy_cahe_path)
+  - 默认是 0.0.0.0，改成 127.0.0.1 本机可访问
+- upstream
+  - upstream 中设置需要被代理的 server 以及用什么算法
+  - server 中 server_name 表示访问的域名
+  - location 中添加 proxy_pass http://server_name
+  - location 中的其他变量
+    - proxy_set_header Host \$host;
+    - proxy_set_header X-Real-IP \$remote_addr;
+    - proxy_set_header X-Forwarded-for \$proxy_add_xforwarded_for;
+    - proxy_cache my_cache;#(需要在 http 模块中设置 proxy_cahe_path)
     - proxy_cache_key $host$uri$is_args$args;
     - proxy_cache_valid 200 304 302 1d;
 
-####  GoAccess可视化access.log
+#### GoAccess 可视化 access.log
 
 - goaccess access.log -o ../html/report.html
-- apt-get install 或者yum install 
+- apt-get install 或者 yum install
 
-#### TLS/SSL协议
+#### TLS/SSL 协议
 
-ISO模型中的表示层无感知安全加密
+ISO 模型中的表示层无感知安全加密
 
 - 密钥交换
-- 身份验证RSA
-- 对称加密算法AES、强度、分组
-- 摘要算法SHA256生成签名
+- 身份验证 RSA
+- 对称加密算法 AES、强度、分组
+- 摘要算法 SHA256 生成签名
 
 #### 对称加密、非对称加密
 
@@ -147,18 +147,252 @@ ISO模型中的表示层无感知安全加密
 非对称加密
 
 - 公钥发给别人用来解密
-- 私钥自己留着用来加密 
+- 私钥自己留着用来加密
 - 身份认证
 
-####  TLS通讯过程
+#### TLS 通讯过程
 
 - 验证身份
 - 达成安全套件共识
 - 传递秘钥
 - 加密通讯
 
-#### 搭建HTTPS网站
+#### 搭建 HTTPS 网站
 
 - yum install python2-certbot-nginx
-- cerbot --nginx-server-root=/usr/local/bin/nginx/conf -d  your-host 
+- cerbot --nginx-server-root=/usr/local/bin/nginx/conf -d your-host
 
+#### SSL/TLS 通用模型
+
+- ISO 模型
+
+  - 应用层
+  - 表示层
+    - 记录
+      - 握手
+      - 交换密钥
+      - 警告
+      - 对称加密的数据应用
+  - 会话层
+  - 传输层
+  - 网络层
+  - 数据链路层
+  - 物理层
+
+- TCP、IP 模型
+
+  - 应用层
+    - 记录【同上】
+  - 传输层
+  - 网络层
+  - 链路层
+
+#### TLS 安全密钥套件
+
+- 密钥交换算法
+- 身份验证算法
+- 对称加密算法、强度、分组
+- 签名 hash 算法
+
+#### 对称加密与非对称加密
+
+- 密钥序列和明文取异或
+- 公钥给别人加密/用私钥解密
+  - 内网签名登录
+  - 身份识别
+
+## PKI 公钥基础设置
+
+- 证书订阅人
+- 登记机构
+- CA
+- 响应程序
+- CRL 服务器
+- Web 服务器
+- 信赖方
+
+#### 证书类型
+
+- 域名验证 DV
+- 组织验证 OV
+- 扩展验证 EV
+
+#### TLS 通讯过程[https://www.jianshu.com/p/7158568e4867]
+
+- 验证身份
+  - client hello 【client 发送的随机数 Random1】
+  - Server Hello 【决定了后续加密和生成摘要时具体使用哪些算法，另外还会生成一份随机数 Random2】
+  - Certificate 【让客户端验证自己的身份】
+  - Server Key Exchange 【这里发送服务器使用的 DH 参数。RSA 算法不需要这一步】
+  - Server Hello done 【 通知客户端 Server Hello 过程结束】
+- 达成安全套件
+  - Certificate Verify 【取出证书中的服务端公钥，再生成一个随机数 Random3 生成 PreMaster Key】
+  - Client Key Exchange 【服务端再用自己的私钥解出这个 PreMaster Key 得到客户端生成的 Random3】
+  - 选择加密算法
+- 传递密钥
+  - 密钥交换
+- 加密通讯
+
+#### nginx 请求流程
+
+- web、email、TCP 流量
+- 状态机【web server】
+  - 传输层
+  - HTTP 状态机
+  - MAIL 状态机
+- 代理给 APP
+  - stream 代理
+  - memcached 代理
+
+#### 信号
+
+- master
+
+  - TERM/INT
+  - QUIT
+  - HUP
+  - USR1
+  - USR2
+  - WINCH
+
+- Worker 进程
+
+  - TERM/INT
+  - QUIT
+  - USR1
+  - WINCH
+
+- 命令行
+
+  - reload：HUP
+  - reopen：USR1
+  - stop：TERM
+  - quit：QUIT
+
+#### reload
+
+- 向 master 发送 HUP 信号
+- master 检查语法是否正确
+- master 打开新的监听端口
+- master 启动新的子进程
+- master 向老的 worker 发送 QUIT 信号
+- 老的 worker 进程关闭监听句柄，处理完链接后退出进程
+
+#### 热升级
+
+- 旧的 nginx 文件换成新的 nginx 文件
+- 向 master 发送 USR2 信号
+- master 进程修改 pid 文件名为.oldbin
+- master 进程用新的 nginx 文件启动新的 master 进程
+- 向老的 master 发送 QUIT
+- 回滚：向老的发送 HUP，新的发送 QUIT
+
+#### 优雅的关闭
+
+- 设置定时器
+- 关闭监听句柄
+- 关闭空闲链接
+- 再循环中等待全部链接关闭
+- 退出进程
+
+#### TCP 流与报文
+
+- 应用层
+- 传输层
+  - 原始端口和目标端口
+- 网络层
+  - 原始 IP 地址和目标 IP 地址
+- 数据链路层
+  - 原始 mac 地址和目标 mac 地址
+
+#### epoll
+
+- 高并发中每次处理活跃比比较小
+- 红黑树、链表
+- 创建、增删改查、获取句柄、关闭
+
+#### 模块分类
+
+- events
+  - epoll
+  - event_core
+- http
+  - upstream 相关模块
+  - 响应过滤模块
+  - 请求处理模块
+- stream
+  - stream 模块
+- mail
+  - mail 魔窟
+- core
+- errlog
+- thread_pool
+- openssl
+
+#### 内存池
+
+- 连接内存池
+- 请求内存池
+
+#### 进程通信
+
+- 信号
+- 共享内存
+- slab 内存管理器
+
+#### openresty
+
+- content_by_lua_block
+
+#### slab 内存管理
+
+- 最多两倍内存消耗
+- 适合小对象
+- 避免碎片和重复初始化
+
+#### 哈希表对齐问题
+
+- 向上取整【64，128】
+  - 避免内存块多余读取
+
+#### 自平衡二叉查找数
+
+- 高度不超过 2logn
+- 增删改查复杂的 logn
+- 遍历复杂度 n
+
+#### 童泰模块提升运维效率
+
+- ./configure --prefix=some-path --with-http_image_filter_module=dynamic
+- load—module
+
+#### 指令和合并
+
+- 值指令：存储配置项的值
+- 动作类指令：指定行为
+- 子配置不存在时候可以继承父配合快
+  - server 下的 root 可以被无 root 定义的 location 继承
+- 合并行为
+  - 在 server 中生效，从 http 向 server 合并
+  - 配置缓存在内存
+
+## 请求过程
+
+- 接受请求事件模块
+  - 三次握手的 ack 被 epoll_wait 捕获
+  - 读取事件分配链接内存池，添加超时定时器
+  - 当请求数据真正过来时，读入缓冲区 client—header-buffer
+- 接受请求 http 模块
+  - 接受 url
+    - 分配请求内存池
+    - 状态机解析请求行
+    - 分配大内存 8k~32k 【4 8k】
+      - large_client_header_buffer
+    - 状态机解析请求头
+    - 标识 uri
+  - 接受 header
+    - 状态机解析 header
+    - 分配大内存
+    - 标识 header
+    - 移除超时器
+    - 开始 11 个阶段的请求处理
